# msfw

./: .gitignore  API_VERSIONING.md  CONFIGURATION.md  DOCUMENTATION_SETUP.md  Makefile  OPENAPI_FEATURES.md  README.md  TYPED_SDK_SUMMARY.md  demo_configuration.py  demo_microservices.py  demo_service_communication.py  demo_typed_service_communication.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
docs/: Makefile  README.md  conf.py  index.md  serve.py
docs/_static/: custom.css
docs/en/: index.md
docs/en/getting_started/: installation.md
docs/getting_started/: basic_concepts.md  configuration.md  installation.md  quick_start.md  service_communication.md
examples/: basic_module.py  logging_plugin.py  versioned_api_example.py
msfw/: __init__.py  cli.py  decorators.py  sdk.py
msfw/core/: __init__.py  application.py  config.py  database.py  module.py  openapi.py  plugin.py  service_client.py  service_registry.py  typed_client.py  types.py  versioning.py
msfw/decorators/: __init__.py  base.py  service.py  versioning.py
msfw/middleware/: __init__.py  logging.py  monitoring.py  security.py  versioning.py
test_project/config/: settings.toml
tests/: __init__.py  conftest.py  test_application.py  test_cli.py  test_config.py  test_database.py  test_integration.py  test_microservice_config.py  test_middleware.py  test_modules.py  test_plugins.py  test_service_decorators.py  test_service_sdk.py  test_versioning.py  utils.py
