[project]
name = "msfw"
version = "0.1.0"
description = "Modular Microservices Framework with FastAPI, Pydantic, and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "dynaconf>=3.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "greenlet>=3.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "coverage>=7.3.0",
    "pre-commit>=3.4.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "coverage>=7.3.0",
]

[project.scripts]
msfw = "msfw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skip_tests = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args

[tool.radon]
exclude = "tests/*,*.egg-info/*,build/*,dist/*"
cc_min = "C"  # Minimum complexity to report

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "myst-parser>=4.0.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "radon>=6.0.1",
    "ruff>=0.11.13",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-intl>=2.3.1",
    "sphinx-rtd-theme>=3.0.2",
]
